added html folder

--- a/html/full-week.html
+++ b/html/full-week.html
@@ -5,14 +5,14 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>My upcoming challenges</title>
-        <link rel="stylesheet" href="./styles/styles.css" />
-        <link rel="stylesheet" href="./styles/full-week.css" />
+        <link rel="stylesheet" href="../styles/styles.css" />
+        <link rel="stylesheet" href="../styles/full-week.css" />
     </head>
     <body>
         <header>
             <h1>My Upcoming Challenges</h1>
             <p id="description">These are my goals for the next days</p>
-            <p><a href="./index.html">View Today's Challenge</a></p>
+            <p><a href="../index.html">View Today's Challenge</a></p>
         </header>
         <main>
             <ol class="challenges">
