--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <footer>
             <p>
                 Explore the
-                <a href="./full-week.html">full week</a>.
+                <a href="./html/full-week.html">full week</a>.
             </p>
         </footer>
     </body>
